 * = Fixed bug with tabs in scripting not showing up correctly on small windows size
 * + Cases like 2²x, 2(x+1) and (x+1)x are now handled correctly for multiplying
 * + Added handling of modulus notation (absolute value) - example |x+2|=|cos(y)|, including superscript (#11)


 ### --------- Version 2.1.0ß - beta -----------  02.06.2016 18:20

 ## New features
 * + Bug reporting now opens link to github project issues page
 * + ScientificNumericUpDown supports now NumericalOutputNotation from settings
 * + TSL finally supports anything with valid variable format raised to any power with superscript notation (before it worked only for x,y,z,i now it works for anything that looks like a variable or constant eg _niceVariableNameᶜᵒˢ⁽ˣ⁾˙ˢⁱⁿ⁽ʰᵃˣˣˣˣ⁾ is working just like it should) (it enabled us to simplify a lot of code in other places)
 * + TSL handles now full mathematical multiplying notation like 2x means 2*x
 * + Chart3D and ComplexChart now supports printing and printpreview
 * + All charts now use the same SaveImage dialog with option for many different image formats, which makes exporting a chart nice experience
 * + New special symbols for better looking exponents
 * + You can now use functions with many parameters in exponents (added comma superscript symbol compatible even with Win XP)
 * + GSL can now be initialized with second method if first doesn't work
 * + Added exception handling for GSL initialization and logging all the errors
 * + Installer will now always install Cambria font, Consolas font and TSL examples files
 * + EditChart3DWindow can now edit chart area values properties
 * + GSL updated to version 2.1
 * + Added solve(m) function for solving linear equations in matrix representation
 * + Added LU, QR, Cholevsky, Evd, Svd and GramSchmidt matrix decompositions
 * + Added more TSL examples including matrix solving and decompositions
 * + Introduction of SharedViewState representing shared state of application for various uses